# phpayroll

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: design-13th-month-computation.md  design-ph-compensation-tax-computation.md  recommended-additional-features.md
phpayroll/: hooks.py  modules.txt  patches.txt  tasks.py
phpayroll/config/: desktop.py  docs.py
phpayroll/desktop_icon/: payroll.json
phpayroll/patches/: ensure_leave_types.py  set_payroll_voucher_run_type_default.py
phpayroll/patches/v1_0/: remove_hr_workspaces.py
phpayroll/ph_payroll/: statutory_reports.py
phpayroll/ph_payroll/custom/: employee.json
phpayroll/ph_payroll/doctype/annual_tax_table/: annual_tax_table.js  annual_tax_table.json  annual_tax_table.py  test_annual_tax_table.py
phpayroll/ph_payroll/doctype/annual_tax_table_item/: annual_tax_table_item.json  annual_tax_table_item.py
phpayroll/ph_payroll/doctype/attendance/: attendance.json  attendance.py
phpayroll/ph_payroll/doctype/attendance_punch/: attendance_punch.json  attendance_punch.py
phpayroll/ph_payroll/doctype/bank_payment_template/: bank_payment_template.json  bank_payment_template.py
phpayroll/ph_payroll/doctype/cash_advance/: cash_advance.js  cash_advance.json  cash_advance.py  test_cash_advance.py
phpayroll/ph_payroll/doctype/cash_advance_liquidation/: cash_advance_liquidation.json  (+1 more)
phpayroll/ph_payroll/tax/: withholding.py
phpayroll/ph_payroll/timekeeping/: exceptions_report.py  importer.py  policy.py  resolver.py  test_policy.py
phpayroll/workspace_sidebar/: payroll.json
(+110 files in other folders)
