[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phpayroll"
version = "0.0.1"
description = "Philippine Payroll"
authors = [
    {name = "Agilasoft Technologies Inc.", email = "info@agilasoft.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frappe",
    "pypika",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.uv.sources]
pypika = { git = "https://github.com/frappe/pypika", rev = "2c50e6142b2d61d2d243e466fdd5dc03b3d918f2" }
